@@ -1,3 +1,8 @@
+2003-01-13  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* include/mqueue.h: Define POSIX 1003.1d draft mq_timedsend() and
+	mq_timedreceive() functions.
+
 2002-12-12  Bart Veer  <bartv@ecoscentric.com>
 
 	* include/stdlib.h: #include cyg_type.h, now that this header
